--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
                             <p class="project_card__title">Portfólio</p>
                             <p class="Project_card__description">Meu primeiro site feito com Html, 
                                 CSS e JavaScript</p>
+                            <div class="project_card__images">
+                                <img src="assets/images/png/html (1).png" alt="HTML">
+                                <img src="assets/images/png/css-3 (1).png" alt="css">
+                                <img src="assets/images/png/js (1).png" alt="JavaScript">
+                            </div>
                         </div>
                     </div>
             </section>
